--- a/Tuplas_listas.ipynb
+++ b/Tuplas_listas.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a905089",
+   "metadata": {},
+   "source": [
+    "<h3>Tuplas</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7c0fa670",
@@ -214,11 +222,178 @@
     "tupla1=(1,2,3,4,5)\n",
     "tupla1[1:4]# hay que tener claro que cuando llamo los indices estos no se muestran."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0202d8b",
+   "metadata": {},
+   "source": [
+    "Para medir la longitud de una tupla o una lista se puede usar la función , hay que tener en cuenta que las tuplas son inmutables, por esta razón no podemos cambiar sus valores, si queremos manipular una tupla lo mejor será crear otra tupla en su lugar, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0d2fd311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla1=(1,2,3,4,5,6) #Acá vemos como medir la longitud de una tupla\n",
+    "longitud_tupla1=len(tupla1)\n",
+    "print(longitud_tupla1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0f81f9",
+   "metadata": {},
+   "source": [
+    "Para ordenar una tupla lo que podemos hacer es usar la función sorted, pero debemos crear una tupla nueva que guarde ese resultado, ver eel ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c8fb1c7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "digitos=(1,3,2,4,6,5,7,9,8,0)\n",
+    "digitos_ordenados=sorted(digitos)\n",
+    "print(digitos_ordenados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16a08734",
+   "metadata": {},
+   "source": [
+    "Una tupla puede contener otra tupla y otros tipos de datos, a este proceso se le llama anidación, para acceder a estos elementos podemos usar indices, para llamar una tupla dentro de otra tupla podemos hacer un llamado de arbol, es decir usar un indice pequeño de la tupla anidada, es mejor con un ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aa0b8258",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pop'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mezclados=(1,2,(\"pop\",\"rock\"),(3,4),(\"disco\",(1,2)))\n",
+    "mezclados[2][0]#Esto nos debe mostrar la palabra pop\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b5d6e841",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mezclados=(1,2,(\"pop\",\"rock\"),(3,4),(\"disco\",(1,2)))\n",
+    "mezclados[3][1]#Esto debería mostrarnos el número 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9fef456b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mezclados=(1,2,(\"pop\",\"rock\"),(3,4),(\"disco\",(1,2)))\n",
+    "mezclados[4][1][1]#Esto debería mostrarnos el número 2, acá estoy entrando en tres tuplas anidadas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaa9f9c3",
+   "metadata": {},
+   "source": [
+    "<h3>Litas</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47caab9d",
+   "metadata": {},
+   "source": [
+    "Las listas son una secuencia ordenada de datos, son muy populares en python, al contrario de las tuplas las listas se representan con corchetes, y en su interior los datos se separan por comas, las listas por el contrario de las tuplas si se pueden modificar, las listas pueden contener diferentes tipos de datos, incluso pueden contener tuplas, se aplican las mimas reglas de indexación "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0c2734e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_lista=[\"nombres: Jose luis\", \"apellidos: Rincón Ortiz\",\"edad: \", 37, \"sexo: \", True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c23d7aaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "04fc3788c23b76e7690e4a8f94f97baaccd63f88ab3a053e1729aa9ad5b22ac6"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.9 ('base')",
    "language": "python",
    "name": "python3"
   },
