En este caso ya termine las listas y las tuplas bien explicado

--- a/Tuplas_listas.ipynb
+++ b/Tuplas_listas.ipynb
@@ -371,12 +371,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "0c2734e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['nombres: Jose luis', 'apellidos: Rincón Ortiz']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "datos_lista=[\"nombres: Jose luis\", \"apellidos: Rincón Ortiz\",\"edad: \", 37, \"sexo: \", True]"
+    "datos_lista=[\"nombres: Jose luis\", \"apellidos: Rincón Ortiz\",\"edad: \", 37, \"sexo: \", True]\n",
+    "datos_lista[0:2] #De esta manera podemos traer ciertas partes de la lista"
    ]
   },
   {
