Estos son los diccionarios, que tienen una llave y un elemento, puede contener diferentes tipos de datos

--- a/Tuplas_listas.ipynb
+++ b/Tuplas_listas.ipynb
@@ -392,11 +392,321 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c23d7aaf",
+   "cell_type": "markdown",
+   "id": "b5ba73d8",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Las listas se pueden concatenar y combinar, veamos el siguiente ekemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "31544482",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jose', ' Luis', ' Rincon ', 'Ortiz']\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombres_ =[\"Jose\",\" Luis\" ]\n",
+    "apellidos_=[\" Rincon \", \"Ortiz\"]\n",
+    "print(nombres_+ apellidos_) #Este es un ejemlo de como puedo concatenar listas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3ff880aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejercicio\n",
+    "[1,2,3]+[1,1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3cd688ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Laura', 'Carolina', 'Parada', 'Rincon']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Podemos extender una lista se puede usar el medito de .extend, como en el siguiente ejemplo, ojo por que en contrario con el caso de .appen en este caso no se crea una nueva lista.\n",
+    "nombres_.extend([apellidos_])\n",
+    "nombre_lala=[\"Laura\",\"Carolina\"]\n",
+    "nombre_lala.extend([\"Parada\",\"Rincon\"])\n",
+    "print(nombre_lala)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6f905e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jose', ' Luis', [' Rincon ', 'Ortiz']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nombres_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "275e1b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jose', ' Luis', ['Rincon', 'Ortiz']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#El otro metodo para agregar un elemento a una lista es .append, miremos el ejemplo\n",
+    "nombres_ =[\"Jose\",\" Luis\" ]\n",
+    "nombres_.append([\"Rincon\",\"Ortiz\"])\n",
+    "print(nombres_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fbd98aba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejercicio\n",
+    "A = [1]\n",
+    "A.append([2,3,4,5])\n",
+    "len(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "09b37eed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', '...', '7']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Como las listas son mutables se pueden cambiar solo llamando al indice que queremos cambiar, veamos el siguiente ejemplo\n",
+    "abcdario=[\"a\",\"b\",\"c\",\"d\",\"z\",\"f\",\"g\",\"...\"]\n",
+    "#Como se ve la z no esta en el lugar que corresponde entonces cambiaremos por la e\n",
+    "abcdario[4]=\"e\"\n",
+    "abcdario.extend([\"7\"])#Vamos a agregar un siete para luego eliminarlo usando la función del\n",
+    "print(abcdario)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5e56663b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', '...']\n"
+     ]
+    }
+   ],
+   "source": [
+    "del(abcdario[8]) #en este caso voy a eliminar el indice 8, que es un 7, por que es un número y los números no tienen por que estar en el abcdario\n",
+    "print(abcdario)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "49c22a70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jose', 'Luis', 'Rincon', 'Ortiz']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Como las cadenas son inmutables, las podemos convertir en listas, para poderlas cambiar, esto lo podemos hacer con el metodo split()\n",
+    "nombre_completo=\"Jose Luis Rincon Ortiz\"\n",
+    "\"Jose Luis Rincon Ortiz\".split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e4100e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Laura Carolina Parada Rincon']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#También se puede usar el el split para poner un separador entre los datos\n",
+    "\"Laura Carolina Parada Rincon\".split(\",\") # de esta manera se eliminan las comas y queda todo en un lista\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "dbfbc3c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LAURA', 'CAROLINA', 'PARADA', 'RINCON']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"LAURA CAROLINA PARADA RINCON\".split()#De esta manera queda separado por listas diferentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1861afc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Python documentation found for 'Jose Luis Rincon Ortiz'.\n",
+      "Use help() to get the interactive help utility.\n",
+      "Use help(str) for help on the str class.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(nombre_completo)#El comando help ayuda a buscar información sobre una función o sobre un elemento en python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c6186a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 4)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ejercicio\n",
+    "AB=(1,2,3,4,5)\n",
+    "AB[1:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d6c563cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#eje4rcicio\n",
+    "ABC=[1]\n",
+    "ABC.append([2,3,4,5])\n",
+    "len(ABC)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a51c2e",
+   "metadata": {},
    "source": []
   }
  ],
