En esta actialización encontramos las condicionales y ramificaciones

--- a/Conjuntos.ipynb
+++ b/Conjuntos.ipynb
@@ -34,12 +34,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Se puede convertir una lista en un conjunto usando la funcion SET()"
+    "#Se puede convertir una lista en un conjunto usando la funcion SET(), a esto se le conoce como casting\n",
+    "prueba=[\"uno\", \"dos\", \"tres\", \"cuatro\", \"cinco\", \"seis\", \"siete\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cuatro', 'seis', 'dos', 'uno', 'siete', 'cinco', 'tres'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prueba_lista=set(prueba) #De esta manera puedo convertir una lista en un conjunto, tengo que asignarselo a otra variable\n",
+    "print(prueba_lista)\n",
+    "type(prueba_lista)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ocho', 'cuatro', 'seis', 'dos', 'uno', 'siete', 'cinco', 'tres'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Podemos usar diferentes operaciones con los conjuntos por ejemplo adicionarle elementos, con el metodo add veamos el ejemplo\n",
+    "prueba_lista.add(\"ocho\")\n",
+    "print(prueba_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ocho', 'cuatro', 'seis', 'siete', 'cinco', 'tres'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Para eliminar un elemento de un conjunto podemos usar el metodo .remove, veamos el ejemplo\n",
+    "prueba_lista.remove(\"dos\") #De este modo se elimina un elemento de un conjunto\n",
+    "print(prueba_lista)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Para comprobar si hay un elemento dentro de un conjunto puedo usar lo mismo de la lista, el comando in, veamos el siguiente ejemplo\n",
+    "\"ocho\" in prueba_lista # de esta manera pruebo si en la lista esta ese elemento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{18, 12, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Podemos mostrar la intersección entre conjunto usando el simbolo &, esto nos mostrará los elementos en común que tienen los conjuntos, veamos ele ejemplo\n",
+    "multiplos_3={3,6,9,12,15,18} #multiplos menores de 20\n",
+    "multiplos_2={2,4,6,8,10,12,14,16,18,20} #multiplos de 2 hasta de 20\n",
+    "multiplos_comunes= multiplos_3 & multiplos_2\n",
+    "print(multiplos_comunes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 4, 6, 8, 9, 10, 12, 14, 15, 16, 18, 20}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Para la opración de unión entre dos conjuntos, podemos usar la funcion union, con esta funcion deberia mostrarme todos los elementos de los dos conjuntos\n",
+    "multiplos_3.union(multiplos_2)# de esta manera me va a mostrar todos los elementos de los conjuntos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
