En esta actualización veremos los ciclos While y los ciclos For

--- a/Condicionales.ipynb
+++ b/Condicionales.ipynb
@@ -353,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aca veremos el operador OR, para esto es mejor usar una tabla de verdad para or entre dos variables \n",
+    "Acá veremos el operador OR, para esto es mejor usar una tabla de verdad para or entre dos variables \n",
     "<table>\n",
     "  <thead>\n",
     "    <tr>\n",
@@ -385,6 +385,88 @@
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jose Ya estas llevado, pero lo piuedes hacer\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Veamos un ejemplo del operador lógico or\n",
+    "edad=37\n",
+    "if edad<30 or edad<34:\n",
+    "    print(\"Jose aún estas joven\")\n",
+    "else:\n",
+    "    print(\"Jose Ya estas llevado, pero lo piuedes hacer\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Acá veremos el operador AND, para este caso, solo será verdadero si las dos sentencias, son verdaderas, pero así como lo anterior es mejor verlo en una tabla de verdad.\n",
+    "<table>\n",
+    "  <thead>\n",
+    "    <tr>\n",
+    "      <th>Operando 1</th>\n",
+    "      <th>Operando 2</th>\n",
+    "      <th>Resultado</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr>\n",
+    "      <td>false</td>\n",
+    "      <td>false</td>\n",
+    "      <td>false</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>false</td>\n",
+    "      <td>true</td>\n",
+    "      <td>false</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>true</td>\n",
+    "      <td>false</td>\n",
+    "      <td>false</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>true</td>\n",
+    "      <td>true</td>\n",
+    "      <td>true</td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "José ROMPELA\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Veamos un ejemplo del operador AND\n",
+    "edad=37\n",
+    "if edad>30 and edad<38:\n",
+    "    print(\"José ROMPELA\")\n",
+    "else:\n",
+    "    print(\"SI NO LO HACES TE VAS A ARREPENTIR\")"
    ]
   },
   {
