Bueno aca terminamos con pandas por el momento, estuvo bueno, ahora sigue numpy, vamos a ver

--- a/Claes_Objetos.ipynb
+++ b/Claes_Objetos.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -102,16 +102,15 @@
        " 'radio']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "#Para crear una clase, hayq ue tener en claro que estas tienen atributos y metodos, y las clases pueden tener instancias u objetos diferentes\n",
-    "class circulo(object):#De esta manera creamos la clase circulo, dentro de parentesis va el objeto, para esta clase definimos dos objetos el color y el radio\n",
-    "    def __init__(self, radio, color): #De esta manera inicializamos la clase y definimos los atributos, __init_es un constructor de clases de Python\n",
+    "class circulo(object):#De esta manera creamos la clase circulo, dentro de parentesis va el objeto, para esta clase definimos dos argumentos el color y el radio\n",
+    "    def __init__(self, radio, color): #De esta manera inicializamos la clase y definimos los atributos, __init__ es un constructor de clases de Python\n",
     "        self.radio=radio;#Por su parte self es como un indice, un metodo que actua sobre la clase como el primer argumento\n",
     "        self.color=color;#Super importante que para definir los atributos se termina en ;\n",
     "\n",
@@ -148,7 +147,7 @@
     }
    ],
    "source": [
-    "class rectangulo(object):#De esta clase creamos la clase rectangulo y los atributos de esta clase son: color, alto y ancho\n",
+    "class rectangulo(object):#Creamos la clase rectangulo y los atributos de esta clase son: color, alto y ancho\n",
     "    def __init__(self, color, alto, ancho):\n",
     "        self.color=color;\n",
     "        self.alto=alto;\n",
