este ejercicio fue increible, es de como usar las API y las APIrest, increible en serio

--- a/Numpy_1.ipynb
+++ b/Numpy_1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h1>Numpy, esta es otra librería super importantem, esta es la que se encarga de todo lo que tiene que ver con las operaciones matemáticas, es una libre ría cientifica</h1>\n",
-    "<h2>Jamás la he visto, pero me causa mucha motivación, ojalá no me de tan duro</h2>"
+    "<h2>Jamás la he visto, pero me causa mucha motivación, ojalá no me de tan duro (ojo acá solo hay matrices de una dimensión)</h2>"
    ]
   },
   {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -465,16 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11f0db010>]"
+       "[<matplotlib.lines.Line2D at 0x11e9b7a60>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -495,7 +495,9 @@
     "columna=np.sin(linea) #Acá lo que vamos a hacer es calcular el seno de cada uno de los elkementos de la matriz anterior\n",
     "import matplotlib.pyplot as plt #Ahora importamos la biblioteca\n",
     "%matplotlib inline\n",
-    "plt.plot(linea,columna)\n"
+    "#Acá lo que hacemos es pedirle que muestre la grafica directamente en el cuarderno\n",
+    "plt.plot(linea,columna)\n",
+    "#Acá graficamos una línea con dos argumentos uno en x y uno en y, en este caso linea y columna\n"
    ]
   },
   {
