bueno acá hemos tratado de usar Apis y tambíen de hacer requerimiento a una página, con protocolo HTTP

--- a/Api_Apirest.ipynb
+++ b/Api_Apirest.ipynb
@@ -12,18 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Primero instalamos la biblioteca con pip install Pycoingecko\n",
     "#Ahora lo que hacemos e importar la librería\n",
-    "from pycoingecko import CoinGeckoAPI\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly.graph_objs as go\n",
+    "from pycoingecko import CoinGeckoAPI # esta librería nos sirve para traer la información de la página CoinGeckoAPI\n",
+    "import pandas as pd #Acá estamos importando la librería de pandas\n",
+    "import matplotlib.pyplot as plt #Acá estamos importando la libredia de marplotlib\n",
+    "import plotly.graph_objs as go #Acá traemos el \n",
     "from plotly.offline import plot\n",
+    "import requests\n",
     "cg = CoinGeckoAPI() #Creamos el objeto cliente #Por favor revisar como se crea un objeto\n",
+    "\n",
     "\n"
    ]
   },
@@ -624,6 +626,44 @@
     "\n",
     "plot(fig, filename='bitcoin_candlestick_graph.html')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LA verdad es que esto es una locura, ver como esto grafica me deja impresionado, la verdad,es re dificil, pero bueno con calam me encanto este modulo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<!DOCTYPE html>\\n<html lang=\"es-mx\" dir=\"ltr\">\\n  <head>\\n    <meta charset=\"utf-8\" />\\n<script>digitalD'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Sigamos haciendo llamados con las API\n",
+    "url='https://www.ibm.com/' #Lo que hacemos es definir una variable con el link al que vamos a citar\n",
+    "r=requests.get(url) # Acá guardamos la respuesta de la solicitud get\n",
+    "r.status_code:200  # Acá obtenemos el estado de el HTTP, esperando que sea 200\n",
+    "r.request.headers #Aca lo hacemos es traer el header de la página\n",
+    "r.request.body:None #Acá solicitamos el body, pero para este caso esperamos que el body, no tenga nada\n",
+    "header=r.headers #Obtenemos los headers y los ponemos en la variable header, ojo que esto viene en un diccionario\n",
+    "header\n",
+    "header['date'] #Aca obtenemos la fecha en la que se envio la respuesta http\n",
+    "header['Content-Type'] #Acá obtenemos el tipo de archivoi que esta en el requerimiento\n",
+    "r.encoding:'UTF-8' #Esta es la forma en que vamos a interpretar la respuesta que obtengamos\n",
+    "r.text[0:100]\n"
    ]
   },
   {
