Esta es la primera parte del examen del curso, esta dificil pero he podido hacerlo

--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Lo primero para hacer web scraping es importar dos librerias, la primera request y la segunda Beatiful soup, una nos sirve para hacer reqerimientos HTTP y la otra nos sirve para interactua con el HTML de la página o XML\n",
+    "#Lo primero para hacer web scraping es importar dos librerias, la primera request y la segunda Beatiful soup, una nos sirve para hacer requerimientos HTTP y la otra nos sirve para interactuar con el HTML de la página o XML\n",
     "from bs4 import BeautifulSoup"
    ]
   },
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "tag_object=soup.title #Acá guardamos el título de la página y usamos la librería sopu para traerla\n",
+    "tag_object=soup.title #Acá guardamos el título de la página y usamos la librería soup para traerla\n",
     "print(tag_object) #Acá imprimimos el título de la página"
    ]
   },
@@ -193,8 +193,8 @@
     }
    ],
    "source": [
-    "#También se puede acceder a una pareja de valores generamdp im diccionario\n",
-    "tag_child.attrs #Esta propiedad noss ayuda a obtener un diciionario de todos los atributos de duna etiqueta html, usando clave y valor\n",
+    "#También se puede acceder a una pareja de valores generando un di ccionario\n",
+    "tag_child.attrs #Esta propiedad nos ayuda a obtener un diciionario de todos los atributos de duna etiqueta html, usando clave y valor\n",
     "tag_child.string #Lo que hace es mostrarnos el diccionario de manera de string"
    ]
   },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -253,11 +253,11 @@
     }
    ],
    "source": [
-    "for i, row in enumerate(table_row):\n",
-    "    print(\"Row\", i)\n",
-    "    cells=row.find_all(\"td\")\n",
-    "    for j, cell in enumerate(cells):\n",
-    "        print(\"column\", j, \"cell\", cell)"
+    "for i, row in enumerate(table_row): #Acá iteramos la lista llamada table_row para obtener cada objeto y cada indice usamos enumerate, y se guarda tanto en i=indece, row=objeto\n",
+    "    print(\"Row\", i) #Aca imprimimos el idice de la fila actual antepuesto de una cadena que se llama \"Row\"\n",
+    "    cells=row.find_all(\"td\") #Acá obtenemos cada valor de de las celdas y lo guardamos en la variable cells\n",
+    "    for j, cell in enumerate(cells): #Ahora recorremos la lista cells tanto el indice como el objeto indice=j, objeto=cells, enumerando cada uno\n",
+    "        print(\"column\", j, \"cell\", cell) #Acá imprimimos el numero de columna (j) y el objeto (cell)"
    ]
   },
   {
